// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tabs Counters 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--xl fd-tabs--compact"
    role="tablist"
  >
    
    
    <li
      aria-controls="d9vOir"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#d9vOir"
      >
        
            
        <p
          class="fd-tabs__count"
        >
          13
        </p>
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Link
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="bSj6ft"
      aria-selected="true"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#bSj6ft"
      >
        
            
        <p
          class="fd-tabs__count"
        >
          1
        </p>
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Selected
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="VrHfHi"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#VrHfHi"
      >
        
            
        <p
          class="fd-tabs__count"
        >
          97
        </p>
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Link
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-button--compact fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="d9vOir"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="bSj6ft"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="VrHfHi"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Default 1`] = `
<section>
  

  <ul
    class="fd-tabs"
    role="tablist"
  >
    
    
    <li
      aria-controls="fuCwV550"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#fuCwV550"
      >
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Link
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="AiWfz165"
      aria-selected="true"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#AiWfz165"
      >
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Selected
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="7ae0T849"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#7ae0T849"
      >
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Link
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="fuCwV550"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="AiWfz165"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="7ae0T849"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Filter mode (compact) 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--l fd-tabs--filter fd-tabs--compact"
    role="tablist"
  >
    
    
    <li
      aria-controls="YETAv8"
      class="fd-tabs__item fd-tabs__item--header"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#YETAv8"
      >
        
            
        <span
          class="fd-tabs__header"
        >
          
                
          <span
            class="fd-tabs__counter-header"
          >
            150
          </span>
          
                
          <span
            class="fd-tabs__label"
          >
            products
          </span>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <div
      class="fd-tabs__separator"
    />
    
    
    <li
      aria-controls="eu3WeD"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#eu3WeD"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            3
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Description
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="VqJcYO"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#VqJcYO"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            40
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Description
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="ceoDu7"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#ceoDu7"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            107
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Description
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-button--compact fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="YETAv8"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="eu3WeD"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="VqJcYO"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="ceoDu7"
    role="tabpanel"
  >
    
    Occaecat cupidatat

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Filter mode 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--l fd-tabs--filter"
    role="tablist"
  >
    
    
    <li
      aria-controls="5ZkDVE"
      class="fd-tabs__item fd-tabs__item--header"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#5ZkDVE"
      >
        
            
        <span
          class="fd-tabs__header"
        >
          
                
          <span
            class="fd-tabs__counter-header"
          >
            100
          </span>
          
                
          <span
            class="fd-tabs__label"
          >
            products
          </span>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <div
      class="fd-tabs__separator"
    />
    
    
    <li
      aria-controls="znvnwr"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#znvnwr"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            35
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Description
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="oyYpL7"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#oyYpL7"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            5
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Description
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="gRpu9H"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#gRpu9H"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            60
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Description
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="5ZkDVE"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="znvnwr"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="oyYpL7"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="gRpu9H"
    role="tabpanel"
  >
    
    Occaecat cupidatat

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Icon (compact) 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--xl fd-tabs--icon-only fd-tabs--compact"
    role="tablist"
  >
    
    
    <li
      aria-controls="0bT4aB"
      class="fd-tabs__item fd-tabs__item--icon-only"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#0bT4aB"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            5
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="kzRyN3"
      aria-selected="true"
      class="fd-tabs__item"
      role="tab"
    >
      
      
      <a
        class="fd-tabs__link"
        href="#kzRyN3"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            78
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="f2epu6"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#f2epu6"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            43
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-button--compact fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="0bT4aB"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="kzRyN3"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="f2epu6"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Icon 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--s fd-tabs--icon-only"
    role="tablist"
  >
    
    
    <li
      aria-controls="pliA92"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#pliA92"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            12
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="ZAN8Hd"
      aria-selected="true"
      class="fd-tabs__item"
      role="tab"
    >
      
      
      <a
        class="fd-tabs__link"
        href="#ZAN8Hd"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            15
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="QrQ5Cl"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#QrQ5Cl"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            1
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="pliA92"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="ZAN8Hd"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="QrQ5Cl"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Navigable 1`] = `
<section>
  

  <nav
    class="fd-tabs fd-tabs--l"
    role="navigation"
  >
    
    
    <span
      aria-controls="kf8369"
      class="fd-tabs__item"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#kf8369"
      >
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Link
            
        </span>
        
        
      </a>
      
    
    </span>
    
    
    <span
      aria-controls="9uQ282"
      class="fd-tabs__item is-selected"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#9uQ282"
      >
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Selected
            
        </span>
        
        
      </a>
      
    
    </span>
    
    
    <span
      aria-controls="DGl707"
      class="fd-tabs__item"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#DGl707"
      >
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Link
            
        </span>
        
        
      </a>
      
    
    </span>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </nav>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="kf8369"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="9uQ282"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="DGl707"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Process mode (compact) 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--l fd-tabs--process fd-tabs--compact"
    role="tablist"
  >
    
    
    <li
      aria-controls="LHsxsZ"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#LHsxsZ"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
            
        </span>
        
            
        <div
          class="fd-tabs__process"
        >
          
                
          <span
            class="fd-tabs__label"
          >
            58 of 122 items
          </span>
          
                
          <span
            class="fd-tabs__label"
          >
            Description
          </span>
          
            
        </div>
        
        
      </a>
      
        
      <span
        class="fd-tabs__process-icon"
      />
      
    
    </li>
    
    
    <li
      aria-controls="ZQvAjG"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#ZQvAjG"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
            
        </span>
        
            
        <div
          class="fd-tabs__process"
        >
          
                
          <span
            class="fd-tabs__label"
          >
            42 of 122 items
          </span>
          
                
          <span
            class="fd-tabs__label"
          >
            Description
          </span>
          
            
        </div>
        
        
      </a>
      
        
      <span
        class="fd-tabs__process-icon"
      />
      
    
    </li>
    
    
    <li
      aria-controls="wdqPV9"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#wdqPV9"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
            
        </span>
        
            
        <div
          class="fd-tabs__process"
        >
          
                
          <span
            class="fd-tabs__label"
          >
            22 of 122 items
          </span>
          
                
          <span
            class="fd-tabs__label"
          >
            Description
          </span>
          
            
        </div>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-button--compact fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="LHsxsZ"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="ZQvAjG"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="wdqPV9"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Process mode 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--l fd-tabs--process"
    role="tablist"
  >
    
    
    <li
      aria-controls="NoQLy6"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#NoQLy6"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
            
        </span>
        
            
        <div
          class="fd-tabs__process"
        >
          
                
          <span
            class="fd-tabs__label"
          >
            58 of 122 items
          </span>
          
                
          <span
            class="fd-tabs__label"
          >
            Description
          </span>
          
            
        </div>
        
        
      </a>
      
        
      <span
        class="fd-tabs__process-icon"
      />
      
    
    </li>
    
    
    <li
      aria-controls="h4yBDR"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#h4yBDR"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
            
        </span>
        
            
        <div
          class="fd-tabs__process"
        >
          
                
          <span
            class="fd-tabs__label"
          >
            22 of 122 items
          </span>
          
                
          <span
            class="fd-tabs__label"
          >
            Description
          </span>
          
            
        </div>
        
        
      </a>
      
        
      <span
        class="fd-tabs__process-icon"
      />
      
    
    </li>
    
    
    <li
      aria-controls="nd1EMQ"
      class="fd-tabs__item"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#nd1EMQ"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
            
        </span>
        
            
        <div
          class="fd-tabs__process"
        >
          
                
          <span
            class="fd-tabs__label"
          >
            42 of 122 items
          </span>
          
                
          <span
            class="fd-tabs__label"
          >
            Description
          </span>
          
            
        </div>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-right"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="NoQLy6"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="h4yBDR"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="nd1EMQ"
    role="tabpanel"
  >
    
    Tincidunt nunc

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Semantic filter mode 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--l fd-tabs--filter"
    role="tablist"
  >
    
    
    <li
      aria-controls="5ZkDVE"
      class="fd-tabs__item fd-tabs__item--header"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#5ZkDVE"
      >
        
            
        <span
          class="fd-tabs__header"
        >
          
                
          <span
            class="fd-tabs__counter-header"
          >
            150
          </span>
          
                
          <span
            class="fd-tabs__label"
          >
            products
          </span>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <div
      class="fd-tabs__separator"
    />
    
    
    <li
      aria-controls="znvnwr"
      class="fd-tabs__item fd-tabs__item--success"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#znvnwr"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            35
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Success
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="oyYpL7"
      class="fd-tabs__item fd-tabs__item--warning"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#oyYpL7"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            5
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Warning
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="gRpu9H"
      class="fd-tabs__item fd-tabs__item--information"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#gRpu9H"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            60
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Information
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="gRpu1A"
      class="fd-tabs__item fd-tabs__item--error"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#gRpu1A"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            50
          </p>
          
            
        </span>
        
            
        <span
          class="fd-tabs__label"
        >
          Error
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="5ZkDVE"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="znvnwr"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="oyYpL7"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="gRpu9H"
    role="tabpanel"
  >
    
    Occaecat cupidatat

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="gRpu1A"
    role="tabpanel"
  >
    
    Nullam sit

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Semantic inline 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--l"
    role="tablist"
  >
    
    
    <li
      aria-controls="5abyKZ"
      class="fd-tabs__item fd-tabs__item--error"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#5abyKZ"
      >
        
            
        <p
          class="fd-tabs__count"
        >
          13
        </p>
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Error
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="wupC7s"
      aria-selected="true"
      class="fd-tabs__item fd-tabs__item--information"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link is-selected"
        href="#wupC7s"
      >
        
            
        <p
          class="fd-tabs__count"
        >
          24
        </p>
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Information
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="XlKpQM"
      class="fd-tabs__item fd-tabs__item--warning"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#XlKpQM"
      >
        
            
        <p
          class="fd-tabs__count"
        >
          31
        </p>
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Warning
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      class="fd-tabs__item fd-tabs__item--success"
      role="tab"
    >
      
        
      <a
        aria-controls="3dUJAI"
        class="fd-tabs__link"
        href="#3dUJAI"
      >
        
            
        <p
          class="fd-tabs__count"
        >
          65
        </p>
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Success
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="TWlAup"
      class="fd-tabs__item fd-tabs__item--neutral"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#TWlAup"
      >
        
            
        <p
          class="fd-tabs__count"
        >
          159
        </p>
        
            
        <span
          class="fd-tabs__tag"
        >
          
                Neutral
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="5abyKZ"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="wupC7s"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="XlKpQM"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="3dUJAI"
    role="tabpanel"
  >
    
    Tincidunt nunc

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="TWlAup"
    role="tabpanel"
  >
    
    Occaecat cupidatat

  </div>
  

</section>
`;

exports[`Storyshots Components/Tabs Semantic mode 1`] = `
<section>
  

  <ul
    class="fd-tabs fd-tabs--l fd-tabs--icon-only fd-tabs--compact"
    role="tablist"
  >
    
    
    <li
      aria-controls="XTsSDD"
      class="fd-tabs__item fd-tabs__item--success"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#XTsSDD"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            54
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="DomvG6"
      aria-selected="true"
      class="fd-tabs__item fd-tabs__item--warning"
      role="tab"
    >
      
      
      <a
        class="fd-tabs__link is-selected"
        href="#DomvG6"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            71
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="DqIStt"
      class="fd-tabs__item fd-tabs__item--information"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#DqIStt"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            23
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="bRCSzS"
      class="fd-tabs__item fd-tabs__item--error"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#bRCSzS"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            4
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <li
      aria-controls="xMN6I9"
      class="fd-tabs__item fd-tabs__item--neutral"
      role="tab"
    >
      
        
      <a
        class="fd-tabs__link"
        href="#xMN6I9"
      >
        
            
        <span
          class="fd-tabs__icon"
        >
          
                
          <i
            class="sap-icon--cart"
            role="presentation"
          />
          
                
          <p
            class="fd-tabs__count"
          >
            100
          </p>
          
            
        </span>
        
        
      </a>
      
    
    </li>
    
    
    <button
      aria-label="See More"
      class="fd-button fd-button--transparent fd-tabs__overflow"
    >
      
        
      <i
        class="sap-icon--slim-arrow-down"
        role="presentation"
      />
      
    
    </button>
    

  </ul>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="XTsSDD"
    role="tabpanel"
  >
    
    Lorem ipsum

  </div>
  

  <div
    aria-expanded="true"
    class="fd-tabs__panel"
    id="DomvG6"
    role="tabpanel"
  >
    
    Dolor sit

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="DqIStt"
    role="tabpanel"
  >
    
    Nullam ut

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="bRCSzS"
    role="tabpanel"
  >
    
    Quaerat voluptatem

  </div>
  

  <div
    aria-expanded="false"
    class="fd-tabs__panel"
    id="xMN6I9"
    role="tabpanel"
  >
    
    Occaecat cupidatat

  </div>
  

</section>
`;
